--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+::selection {background: #ADD802;}
+
 header {
     position: absolute;
     width: 100vw;
@@ -19,6 +21,7 @@ header {
 
 .hero-text {
     color: white;
+    font-family: Geneva, sans-serif;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -28,9 +31,20 @@ header {
 }
 
 .hero-text h1 {
-    font-size: 4em;
+    font-size: 5em;
     color: whitesmoke;
-    font-family: Geneva, sans-serif;
     font-weight: 100;
     text-shadow: 0 0 25px #000;
 }
+
+.hero-text p {
+    font-size: 1.5em
+}
+
+.hero-link {
+color: whitesmoke;
+}
+
+.hero-link:hover {
+    color: #ADD802;
+    }
