Apply Timeline Jekyll Theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,35 +1,91 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8" />
-  <title>{{ page.title }}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+{% include head.html %}
 
-  <!-- prettier-ignore -->
-  {% seo %}
-  <!-- prettier-ignore -->
-  {% feed_meta %}
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <meta name="theme-color" content="#ADD802">
-
-  <!-- External CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-  <!-- Main CSS -->
-  <link rel="stylesheet" href="css/style.css">
-
-</head>
-
-<body>
   {% include navigation.html %}
-  {{ content }}
+  {% include header.html %}
+
+  {% for page in site.pages %}
+  {% if page.section-type == "default" %}
+  <!-- {{ page.title }} Section -->
+  <section id="{{ page.title }}" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        {{ page.content | markdownify }}
+      </div>
+    </div>
+  </section>
+  {% elsif page.section-type == "contact" %}
+  <!-- {{ page.title }} Section -->
+  <section id="{{ page.title }}" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        {{ page.content | markdownify }}
+
+        {% if page.email %}
+        <p><a href="mailto:{{ page.email }}">{{ page.email }}</a></p>
+        {% endif %}
+        <ul class="list-inline social-buttons">
+          {% for network in page.social %}
+          <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }} fa-fw"></i></a></li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </section>
+  {% elsif page.section-type == "timeline" %}
+  <!-- {{ page.title }} Section -->
+  <section id="{{ page.title }}" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        {{ page.content | markdownify }}
+        <ul class="timeline">
+          {% for post in site.posts %}
+          {% assign loopindex = forloop.index | modulo: 2 %}
+          {% capture class %}
+          {% if loopindex == 0 %}
+          timeline-inverted
+          {% endif %}
+          {% endcapture %}
+
+          <li class="{{ class }}">
+            <div class="timeline-image">
+              <img class="img-circle img-responsive"
+                src="{{ site.baseurl }}/{% if post.image %}{{ post.image }}{% else %}{{site.career-img}}{% endif %}"
+                alt="">
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>{{ post.title }}</h4>
+                <h4 class="subheading">{{ post.subtitle }}</h4>
+              </div>
+              <div class="timeline-body">
+                <p class="text-muted">{{ post.content }}</p>
+              </div>
+            </div>
+          </li>
+
+          {% endfor %}
+
+          <li class="timeline-inverted">
+            <div class="timeline-image">
+              <img class="img-circle img-responsive" src="{{ site.baseurl }}/{{ site.career-img }}" alt="">
+            </div>
+          </li>
+
+        </ul>
+
+      </div>
+    </div>
+  </section>
+  {% endif %}
+  {% endfor %}
+
+  {% include footer.html %}
+  {% include js.html %}
 </body>
 
 </html>
