--- a/_includes/js.html
+++ b/_includes/js.html
@@ -10,11 +10,10 @@
     crossorigin="anonymous"></script>
 
 <!-- Plugin JavaScript -->
-<script src="./../js/jquery.easing.min.js"></script>
-<script src="./../js/grayscale.js"></script>
+<script src="https://kit.fontawesome.com/5974714594.js" crossorigin="anonymous"></script>
 
 <!-- Custom JavaScript -->
-<script src="{{ site.baseurl }}/js/grayscale.js"></script>
+<script src="../js/script.js"></script>
 
 {% if site.google-tracking-id %}
 <script>
