--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 {% include head.html %}
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" data-spy="scroll" data-target=".navbar" data-offset="50">
 
   {% include navigation.html %}
   {% include header.html %}
@@ -13,7 +13,7 @@
   <!-- {{ page.title }} Section -->
   <section id="{{ page.title }}" class="container content-section text-center">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
+      <div class="col-lg-8">
         {{ page.content | markdownify }}
       </div>
     </div>
@@ -22,7 +22,7 @@
   <!-- {{ page.title }} Section -->
   <section id="{{ page.title }}" class="container content-section text-center">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
+      <div class="col-lg-8">
         {{ page.content | markdownify }}
 
         {% if page.email %}
@@ -40,7 +40,7 @@
   <!-- {{ page.title }} Section -->
   <section id="{{ page.title }}" class="container content-section text-center">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
+      <div class="col-lg-8">
         {{ page.content | markdownify }}
         <ul class="timeline">
           {% for post in site.posts %}
