--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,16 @@
 <!-- Hero Start -->
-<header class="jumbotron jumbotron-fluid bg-light">
-    <div class="container">
-        <div class="col-md-8">
-            <h1 class="display-4">Fluid jumbotron</h1>
-            <p class="lead">{{ content }}</p>
-            <div class="">
-                <a href="#About" class="btn btn-circle page-scroll bg-secondary rounded-circle text-white">
+<header class="hero">
+    <div class="pt-5 pb-5 pb-lg-0 container">
+        <div class="row justify-content-md-between align-items-center align-items-md-start">
+            <div class="col-8 col-md-7 pt-xl-5">
+                <h1 class="display-4">Managing Relationships</h1>
+                <p class="lead">{{ content }}</p>
+                <!-- <a href="#About" class="btn btn-circle page-scroll bg-secondary rounded-circle text-white">
                     <i class="fa fa-angle-double-down animated"></i>
-                </a>
+                </a> -->
+            </div>
+            <div class="col-4 col-xl-5 pt-lg-0 pb-lg-5 px-lg-5">
+                <img class="img-fluid" src="./../assets/uploads/heroCubetree.svg" alt="3D tree made of cubes">
             </div>
         </div>
     </div>
