--- a/_includes/homeNavigation.html
+++ b/_includes/homeNavigation.html
@@ -7,14 +7,14 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarToggleMenu">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0 text-right">
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
-                <li class="nav-item"><a class="page-scroll nav-link" href="#About">About</a></li>
-                <li class="nav-item"><a class="page-scroll nav-link" href="#Clients">Clients</a></li>
-                <li class="nav-item"><a class="page-scroll nav-link" href="#Team">Team</a></li>
-                <li class="nav-item"><a class="page-scroll nav-link" href="#Contact">Contact Us</a></li>
+                <li class="nav-item"><a class="page-scroll nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="page-scroll nav-link" href="#clients">Clients</a></li>
+                <li class="nav-item"><a class="page-scroll nav-link" href="#team">Team</a></li>
+                <li class="nav-item"><a class="page-scroll nav-link" href="#contact">Contact Us</a></li>
             </ul>
         </div>
     </div>
