--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,6 @@
   {% endfor %}
 
   <div class="container text-center">
-    <p>Copyright &copy; {{ site.author }} {{ site.time | date: "%Y" }}</p>
+    <p>Copyright &copy; {{ site.company.name }} {{ site.time | date: "%Y" }}</p>
   </div>
 </footer>
