Add contact form

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,16 @@ header.hero {
   width: 1em;
 }
 
+.contact { background-color: #99C46B; }
+
+.contact .card-header, .contact form button {
+  background-color: #53ac4e;
+  transition: background-color 200ms;
+  }
+
+.contact form button:hover { background-color: #479b42; }
+
+.footer-nav li a:hover { text-decoration: none; }
 
 /* Extra small devices (portrait phones, less than 576px) */
 /* No media query since this is the default in Bootstrap */
