--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,18 @@
-<footer>
-  {% for item in site.data.navigation %}
-  <a href="{{ item.link }}">
-    {{ item.name }}
-  </a>
-  {% endfor %}
-
-  <div class="container text-center">
-    <p>Copyright &copy; {{ site.company.name }} {{ site.time | date: "%Y" }}</p>
+<footer class="bg-dark text-white">
+  <div class="container py-2 text-center">
+    <img class="mt-3 mb-2" style="height: 2.5em;" src="../assets/img/cubetreeIcon.png" alt="Cubetree Icon">
+    <div class="text-light container">
+      <div class="row justify-content-center">
+        <a href="mailto:{{ site.company.email }}" target="_blank" class="text-light p-4"><i
+            class="fas fa-lg fa-envelope"></i></a>
+        <a href="http://maps.google.com/?q={{ site.company.gmaps }}" target="_blank" class="text-light p-4"><i
+            class="fas fa-lg fa-map-marker-alt"></i></a>
+        {% if site.company.mobile != '' %}
+        <a href="tel:{{ site.company.mobile }}" target="_blank" class="text-light p-4"><i
+            class="fas fa-lg fa-phone"></i></a>
+        {% endif %}
+      </div>
+    </div>
+    <p>Copyright &copy; {{ site.time | date: "%Y" }} &bull; {{ site.company.name }}</p>
   </div>
 </footer>
