Add Arboreal section

--- a/_includes/homeNavigation.html
+++ b/_includes/homeNavigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md sticky-top navbar-light bg-white">
+<nav class="navbar navbar-expand-md sticky-top navbar-light bg-white py-0 py-md-1">
     <div class="container">
         <a class="navbar-brand" href="#"><img src="../assets/img/cubetreeLogo_dark.svg" alt="Cubetree Logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleMenu"
@@ -11,8 +11,8 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
+                <li class="nav-item"><a class="page-scroll nav-link" href="#clients">Clients</a></li>
                 <li class="nav-item"><a class="page-scroll nav-link" href="#about">About</a></li>
-                <!-- <li class="nav-item"><a class="page-scroll nav-link" href="#clients">Clients</a></li> -->
                 <!-- <li class="nav-item"><a class="page-scroll nav-link" href="#team">Team</a></li> -->
                 <li class="nav-item"><a class="page-scroll nav-link" href="#contact">Contact Us</a></li>
             </ul>
