Edit Button Style

--- a/_includes/sections/clients.html
+++ b/_includes/sections/clients.html
@@ -27,7 +27,8 @@
                 <div class="col-md-8 p-4 clientDescription">
                     <h3 class="mb-4">{{ client.body.head }}</h3>
                     <p class="mb-5">{{ client.body.body }}</p>
-                    <a class="btn text-white" href="#contact">{{ client.body.btn }}</a>
+                    <a class="btn button text-white" href="#contact">{{ client.body.btn }}<i
+                            class="fas fa-xs fa-chevron-right ml-2 mb-1"></i></a>
                 </div>
             </div>
         </div>
