--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -7,7 +7,7 @@
                 <h1 class="display-4">{{ data.heading }}</h1>
                 <p class="lead">{{ data.subheading | markdownify }}</p>
                 {% if data.button.visibility %}
-                <a href="{{ data.button.href }}" class="btn btn-light page-scroll ">
+                <a href="{{ data.button.href }}" class="btn button text-white page-scroll ">
                     {{ data.button.label }}
                     <i class="fas fa-xs fa-chevron-right ml-2 mb-1"></i>
                 </a>
