Replace Client with Partner

--- a/_includes/sections/partners.html
+++ b/_includes/sections/partners.html
@@ -1,4 +1,4 @@
-{% assign data = site.data.clients %}
+{% assign data = site.data.partners %}
 <!-- {{ data.title }} Start -->
 <section id="{{ data.title }}" class="{% if data.heading != '' %}py-4 py-lg-5 {% endif %}content-section">
     <div class="container">
