--- a/_includes/homeNavigation.html
+++ b/_includes/homeNavigation.html
@@ -11,7 +11,7 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
-                <li class="nav-item"><a class="page-scroll nav-link" href="#clients">Clients</a></li>
+                <li class="nav-item"><a class="page-scroll nav-link" href="#partner">Partner</a></li>
                 <li class="nav-item"><a class="page-scroll nav-link" href="#about">About</a></li>
                 <!-- <li class="nav-item"><a class="page-scroll nav-link" href="#team">Team</a></li> -->
                 <li class="nav-item"><a class="page-scroll nav-link" href="#contact">Contact Us</a></li>
