--- a/_includes/sections/partners.html
+++ b/_includes/sections/partners.html
@@ -27,8 +27,8 @@
                 <div class="col-md-8 p-4 clientDescription">
                     <h3 class="mb-4">{{ client.body.head }}</h3>
                     <p class="mb-5">{{ client.body.body }}</p>
-                    <a class="btn button text-white" href="#contact">{{ client.body.btn }}<i
-                            class="fas fa-xs fa-chevron-right ml-2 mb-1"></i></a>
+                    <a class="btn button text-white" href="assets/docs/Magicleaf_HORECA_Presentation_March 2020.pdf"
+                        target="_blank">{{ client.body.btn }}<i class="fas fa-xs fa-chevron-right ml-2 mb-1"></i></a>
                 </div>
             </div>
         </div>
